objects/Program__c.object
<CustomObject>
    <description>Formerly &apos;Project&apos;. Used with Biopharma accounts, to track info related to studies.</description>
    <fields>
        <fullName>Audit_Requirement__c</fullName>
        <label>Audit Requirement</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Biomarker__c</fullName>
        <label>Biomarker</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Drug__c</fullName>
        <label>Drug</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Executed_CDA__c</fullName>
        <formula>Sponsor_Account__r.CDA__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Derived from the Sponsor Account</inlineHelpText>
        <label>Executed CDA?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Executed_MSA__c</fullName>
        <formula>Sponsor_Account__r.MSA__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Derived from Sponsor Account</inlineHelpText>
        <label>Executed MSA?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gene_Targets__c</fullName>
        <label>Genes of Interest</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Indications__c</fullName>
        <label>Indications</label>
        <length>4096</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Line_of_Therapy__c</fullName>
        <label>Line of Therapy</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Refractory</fullName>
                </value>
                <value>
                    <fullName>Neo-adjuvent</fullName>
                </value>
                <value>
                    <fullName>Adjuvent</fullName>
                </value>
                <value>
                    <fullName>Recurrent</fullName>
                </value>
                <value>
                    <fullName>1st line</fullName>
                </value>
                <value>
                    <fullName>2nd line</fullName>
                </value>
                <value>
                    <fullName>2nd line+</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NCT_Trial_Link__c</fullName>
        <label>NCT Trial Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Probability__c</fullName>
        <label>Probability</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Program_no__c</fullName>
        <displayFormat>{000000}</displayFormat>
        <label>Program #</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Project_Status__c</fullName>
        <label>Program Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Initiated</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Lost</fullName>
                </value>
                <value>
                    <fullName>SOW Drafting</fullName>
                </value>
                <value>
                    <fullName>Executed</fullName>
                </value>
                <value>
                    <fullName>Program Canceled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Protocol_Name__c</fullName>
        <label>Protocol Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_Opportunity_Lost__c</fullName>
        <label>Reason Opportunity Lost</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sponsor_Account__c</fullName>
        <label>Sponsor Account</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Biopharma</value>
            </filterItems>
            <infoMessage>Must use an account record of type &apos;Biopharma&apos;.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Programs</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Study_ID_del__c</fullName>
        <label>Study ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Study_Name__c</fullName>
        <label>Study Title</label>
        <length>512</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Success_Criteria__c</fullName>
        <label>Success Criteria</label>
        <length>8192</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Therapy_Type__c</fullName>
        <label>Therapy Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Targeted</fullName>
                </value>
                <value>
                    <fullName>Adj Targeted</fullName>
                </value>
                <value>
                    <fullName>IO</fullName>
                </value>
                <value>
                    <fullName>Combo</fullName>
                </value>
                <value>
                    <fullName>Chemo</fullName>
                </value>
                <value>
                    <fullName>Parp</fullName>
                </value>
                <value>
                    <fullName>Hormonal</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Anticipated_Volume__c</fullName>
        <label>Total Anticipated Volume</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Trial_Name__c</fullName>
        <label>Trial Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trial_Phase__c</fullName>
        <label>Trial Phase</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>I</fullName>
                </value>
                <value>
                    <fullName>I/II</fullName>
                </value>
                <value>
                    <fullName>II</fullName>
                </value>
                <value>
                    <fullName>II/III</fullName>
                </value>
                <value>
                    <fullName>III</fullName>
                </value>
                <value>
                    <fullName>III/IV</fullName>
                </value>
                <value>
                    <fullName>IV</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pharma Sponsored</fullName>
                </value>
                <value>
                    <fullName>Guardant Sponsored</fullName>
                </value>
                <value>
                    <fullName>Consortia</fullName>
                    <isActive>false</isActive>
                    <label>Consortia</label>
                </value>
                <value>
                    <fullName>Patient Referrals</fullName>
                    <isActive>false</isActive>
                    <label>Patient Referrals</label>
                </value>
                <value>
                    <fullName>Sample Processing</fullName>
                    <isActive>false</isActive>
                    <label>Sample Processing</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>update</label>
        <type>Checkbox</type>
    </fields>
    <label>Program</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Sponsor_Account__c</columns>
        <columns>Gene_Targets__c</columns>
        <columns>NCT_Trial_Link__c</columns>
        <columns>Type__c</columns>
        <columns>Trial_Phase__c</columns>
        <columns>Biomarker__c</columns>
        <columns>Therapy_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Program Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Programs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>